# novella

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: park_walk.txt  save_the_world.txt
src/: args.rs  builder.rs  main.rs  parser.rs  statics.rs  tests.rs  types.rs
